<resources>
    <string name="app_name">Perpustakaan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="inputUsername">Masukkan Username</string>
    <string name="password">Password</string>
    <string name="inputPassword">Masukkan Password</string>
    <string name="belumPunyaAkun">Belum Mempunyai Akun?</string>
    <string name="edit">Ubah Password</string>
    <string name="profile">Profile</string>
    <string name="address_profile">Alama</string>
    <string name="email">Email</string>
    <string name="inputEmail">Masukkan Email</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="searchbar_hint">Cari idbuku, judul, penerbit dan pengarang...</string>

    <string-array name="data_name">
        <item>Pinjam Buku</item>
        <item>Koleksi Buku</item>
        <item>Detail Buku</item>
    </string-array>
    <integer-array name="data_photo">
        <item>@drawable/pinjam</item>
        <item>@drawable/koleksi</item>
        <item>@drawable/search</item>

    </integer-array>
</resources>